--- a/css/main.css
+++ b/css/main.css
@@ -625,6 +625,16 @@ video {
   margin-right: -0.75rem;
 }
 
+.my-4{
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.my-6{
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+}
+
 .ml-36{
   margin-left: 9rem;
 }
@@ -661,8 +671,8 @@ video {
   margin-bottom: 2rem;
 }
 
-.mt-40{
-  margin-top: 10rem;
+.mt-\[100vh\]{
+  margin-top: 100vh;
 }
 
 .mt-20{
@@ -671,6 +681,10 @@ video {
 
 .mb-12{
   margin-bottom: 3rem;
+}
+
+.mt-12{
+  margin-top: 3rem;
 }
 
 .mb-6{
@@ -689,8 +703,16 @@ video {
   margin-top: 2rem;
 }
 
-.mt-6{
-  margin-top: 1.5rem;
+.mt-24{
+  margin-top: 6rem;
+}
+
+.mb-40{
+  margin-bottom: 10rem;
+}
+
+.mt-40{
+  margin-top: 10rem;
 }
 
 .block{
@@ -722,8 +744,8 @@ video {
   height: 1px;
 }
 
-.h-\[40vh\]{
-  height: 40vh;
+.h-\[auto\]{
+  height: auto;
 }
 
 .h-full{
@@ -738,8 +760,12 @@ video {
   height: 400px;
 }
 
-.h-2\/3{
-  height: 66.666667%;
+.h-\[40vh\]{
+  height: 40vh;
+}
+
+.h-\[50vh\]{
+  height: 50vh;
 }
 
 .w-\[250px\]{
@@ -778,16 +804,64 @@ video {
   width: 11rem;
 }
 
-.w-\[800px\]{
-  width: 800px;
-}
-
 .w-\[400px\]{
   width: 400px;
 }
 
+.w-\[500px\]{
+  width: 500px;
+}
+
+.w-\[200px\]{
+  width: 200px;
+}
+
+.w-\[300px\]{
+  width: 300px;
+}
+
+.w-\[600px\]{
+  width: 600px;
+}
+
+.w-\[80\%\]{
+  width: 80%;
+}
+
+.w-\[80vh\]{
+  width: 80vh;
+}
+
 .w-1\/3{
   width: 33.333333%;
+}
+
+.w-\[800px\]{
+  width: 800px;
+}
+
+.w-\[100vh\]{
+  width: 100vh;
+}
+
+.w-\[1000px\]{
+  width: 1000px;
+}
+
+.w-\[2000px\]{
+  width: 2000px;
+}
+
+.w-\[1400px\]{
+  width: 1400px;
+}
+
+.w-\[1500px\]{
+  width: 1500px;
+}
+
+.min-w-\[400px\]{
+  min-width: 400px;
 }
 
 .max-w-md{
@@ -796,6 +870,22 @@ video {
 
 .max-w-lg{
   max-width: 32rem;
+}
+
+.max-w-6xl{
+  max-width: 72rem;
+}
+
+.max-w-\[500px\]{
+  max-width: 500px;
+}
+
+.max-w-5xl{
+  max-width: 64rem;
+}
+
+.max-w-7xl{
+  max-width: 80rem;
 }
 
 .shrink-0{
@@ -824,12 +914,20 @@ video {
   flex-direction: column;
 }
 
+.flex-col-reverse{
+  flex-direction: column-reverse;
+}
+
 .flex-wrap{
   flex-wrap: wrap;
 }
 
 .items-start{
   align-items: flex-start;
+}
+
+.items-end{
+  align-items: flex-end;
 }
 
 .items-center{
@@ -852,16 +950,16 @@ video {
   justify-content: space-between;
 }
 
-.justify-evenly{
-  justify-content: space-evenly;
-}
-
 .gap-6{
   gap: 1.5rem;
 }
 
 .gap-4{
   gap: 1rem;
+}
+
+.gap-12{
+  gap: 3rem;
 }
 
 .gap-x-8{
@@ -939,6 +1037,10 @@ video {
   border-width: 0px;
 }
 
+.border-2{
+  border-width: 2px;
+}
+
 .border-t{
   border-top-width: 1px;
 }
@@ -956,6 +1058,11 @@ video {
 .border-gray-500{
   --tw-border-opacity: 1;
   border-color: rgb(107 114 128 / var(--tw-border-opacity));
+}
+
+.border-\[\#242424\]{
+  --tw-border-opacity: 1;
+  border-color: rgb(36 36 36 / var(--tw-border-opacity));
 }
 
 .border-t-gray-200{
@@ -992,6 +1099,11 @@ video {
   background-color: rgb(36 36 36 / var(--tw-bg-opacity));
 }
 
+.bg-red-200{
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 202 202 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#eeefef\]{
   --tw-bg-opacity: 1;
   background-color: rgb(238 239 239 / var(--tw-bg-opacity));
@@ -1007,9 +1119,24 @@ video {
   background-color: rgb(1 211 175 / var(--tw-bg-opacity));
 }
 
+.bg-red-50{
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 242 242 / var(--tw-bg-opacity));
+}
+
+.bg-black{
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
 .object-contain{
   -o-object-fit: contain;
      object-fit: contain;
+}
+
+.object-cover{
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .object-fill{
@@ -1023,6 +1150,10 @@ video {
 
 .p-4{
   padding: 1rem;
+}
+
+.p-12{
+  padding: 3rem;
 }
 
 .px-4{
@@ -1080,6 +1211,31 @@ video {
   padding-bottom: 0.75rem;
 }
 
+.px-12{
+  padding-left: 3rem;
+  padding-right: 3rem;
+}
+
+.px-36{
+  padding-left: 9rem;
+  padding-right: 9rem;
+}
+
+.py-4{
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.py-5{
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+
+.px-6{
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
 .pt-4{
   padding-top: 1rem;
 }
@@ -1094,14 +1250,6 @@ video {
 
 .pt-5{
   padding-top: 1.25rem;
-}
-
-.pt-7{
-  padding-top: 1.75rem;
-}
-
-.pt-12{
-  padding-top: 3rem;
 }
 
 .pb-2{
@@ -1138,18 +1286,38 @@ video {
   font-size: 16px;
 }
 
-.text-3xl{
-  font-size: 1.875rem;
-  line-height: 2.25rem;
-}
-
 .text-\[18px\]{
   font-size: 18px;
+}
+
+.text-4xl{
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 
 .text-2xl{
   font-size: 1.5rem;
   line-height: 2rem;
+}
+
+.text-6xl{
+  font-size: 3.75rem;
+  line-height: 1;
+}
+
+.text-3xl{
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
+.text-7xl{
+  font-size: 4.5rem;
+  line-height: 1;
+}
+
+.text-8xl{
+  font-size: 6rem;
+  line-height: 1;
 }
 
 .font-\[600\]{
@@ -1180,8 +1348,24 @@ video {
   font-weight: 400;
 }
 
+.font-light{
+  font-weight: 300;
+}
+
+.font-thin{
+  font-weight: 100;
+}
+
 .uppercase{
   text-transform: uppercase;
+}
+
+.italic{
+  font-style: italic;
+}
+
+.leading-relaxed{
+  line-height: 1.625;
 }
 
 .leading-tight{
@@ -1222,11 +1406,6 @@ video {
   color: rgb(36 36 36 / var(--tw-text-opacity));
 }
 
-.text-\[\#0fcab2\]{
-  --tw-text-opacity: 1;
-  color: rgb(15 202 178 / var(--tw-text-opacity));
-}
-
 .text-\[\#f57456\]{
   --tw-text-opacity: 1;
   color: rgb(245 116 86 / var(--tw-text-opacity));
@@ -1235,11 +1414,6 @@ video {
 .text-darkBlue{
   --tw-text-opacity: 1;
   color: rgb(1 16 76 / var(--tw-text-opacity));
-}
-
-.text-veryDarkBlue{
-  --tw-text-opacity: 1;
-  color: hsl(233 12% 13% / var(--tw-text-opacity));
 }
 
 .shadow{
@@ -1961,20 +2135,12 @@ main p:last-child {
     top: 0px;
   }
 
+  .md\:mt-0{
+    margin-top: 0px;
+  }
+
   .md\:mb-0{
     margin-bottom: 0px;
-  }
-
-  .md\:mt-4{
-    margin-top: 1rem;
-  }
-
-  .md\:mt-12{
-    margin-top: 3rem;
-  }
-
-  .md\:mt-16{
-    margin-top: 4rem;
   }
 
   .md\:block{
@@ -1989,16 +2155,48 @@ main p:last-child {
     display: none;
   }
 
-  .md\:w-1\/2{
-    width: 50%;
-  }
-
   .md\:w-full{
     width: 100%;
   }
 
+  .md\:w-1\/2{
+    width: 50%;
+  }
+
+  .md\:w-\[800px\]{
+    width: 800px;
+  }
+
+  .md\:w-\[1500px\]{
+    width: 1500px;
+  }
+
   .md\:max-w-md{
     max-width: 28rem;
+  }
+
+  .md\:max-w-full{
+    max-width: 100%;
+  }
+
+  .md\:max-w-5xl{
+    max-width: 64rem;
+  }
+
+  .md\:max-w-4xl{
+    max-width: 56rem;
+  }
+
+  .md\:max-w-3xl{
+    max-width: 48rem;
+  }
+
+  .md\:max-w-2xl{
+    max-width: 42rem;
+  }
+
+  .md\:max-w-xl{
+    max-width: 36rem;
   }
 
   .md\:flex-row{
@@ -2020,6 +2218,14 @@ main p:last-child {
     margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
+  .md\:p-12{
+    padding: 3rem;
+  }
+
+  .md\:p-10{
+    padding: 2.5rem;
+  }
+
   .md\:py-2{
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
@@ -2035,16 +2241,27 @@ main p:last-child {
     padding-right: 1.5rem;
   }
 
+  .md\:py-12{
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+  }
+
+  .md\:px-36{
+    padding-left: 9rem;
+    padding-right: 9rem;
+  }
+
+  .md\:px-12{
+    padding-left: 3rem;
+    padding-right: 3rem;
+  }
+
   .md\:pt-8{
     padding-top: 2rem;
   }
 
   .md\:pl-12{
     padding-left: 3rem;
-  }
-
-  .md\:pt-16{
-    padding-top: 4rem;
   }
 
   .md\:pt-12{
@@ -2060,12 +2277,38 @@ main p:last-child {
     line-height: 1.25rem;
   }
 
+  .md\:text-4xl{
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+
   .md\:text-5xl{
     font-size: 3rem;
     line-height: 1;
   }
 
-  .md\:leading-\[3\.4rem\]{
-    line-height: 3.4rem;
+  .md\:text-8xl{
+    font-size: 6rem;
+    line-height: 1;
+  }
+
+  .md\:font-black{
+    font-weight: 900;
+  }
+
+  .md\:font-semibold{
+    font-weight: 600;
+  }
+
+  .md\:font-normal{
+    font-weight: 400;
+  }
+
+  .md\:font-light{
+    font-weight: 300;
+  }
+
+  .md\:font-thin{
+    font-weight: 100;
   }
 }
