--- a/css/main.css
+++ b/css/main.css
@@ -626,14 +626,19 @@ video {
   margin-right: auto;
 }
 
+.my-4{
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
 .my-2{
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
 }
 
-.my-6{
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
+.my-8{
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 
 .-mx-3{
@@ -681,18 +686,6 @@ video {
   margin-top: 5rem;
 }
 
-.mt-24{
-  margin-top: 6rem;
-}
-
-.mb-12{
-  margin-bottom: 3rem;
-}
-
-.mt-12{
-  margin-top: 3rem;
-}
-
 .mb-6{
   margin-bottom: 1.5rem;
 }
@@ -711,6 +704,14 @@ video {
 
 .mt-\[100vh\]{
   margin-top: 100vh;
+}
+
+.mb-12{
+  margin-bottom: 3rem;
+}
+
+.mt-12{
+  margin-top: 3rem;
 }
 
 .block{
@@ -802,20 +803,45 @@ video {
   width: 700px;
 }
 
-.w-\[200px\]{
-  width: 200px;
+.w-\[180px\]{
+  width: 180px;
 }
 
-.w-\[600px\]{
-  width: 600px;
+.w-\[200px\]{
+  width: 200px;
 }
 
 .w-\[400px\]{
   width: 400px;
 }
 
-.min-w-\[400px\]{
-  min-width: 400px;
+.min-w-\[200px\]{
+  min-width: 200px;
+}
+
+.min-w-full{
+  min-width: 100%;
+}
+
+.min-w-fit{
+  min-width: -moz-fit-content;
+  min-width: fit-content;
+}
+
+.min-w-\[100xp\]{
+  min-width: 100xp;
+}
+
+.min-w-\[100px\]{
+  min-width: 100px;
+}
+
+.min-w-\[50px\]{
+  min-width: 50px;
+}
+
+.min-w-\[10px\]{
+  min-width: 10px;
 }
 
 .max-w-md{
@@ -828,6 +854,18 @@ video {
 
 .max-w-2xl{
   max-width: 42rem;
+}
+
+.max-w-\[400px\]{
+  max-width: 400px;
+}
+
+.max-w-\[500px\]{
+  max-width: 500px;
+}
+
+.max-w-\[600px\]{
+  max-width: 600px;
 }
 
 .shrink-0{
@@ -860,20 +898,12 @@ video {
   flex-direction: column;
 }
 
-.flex-col-reverse{
-  flex-direction: column-reverse;
-}
-
 .flex-wrap{
   flex-wrap: wrap;
 }
 
 .items-start{
   align-items: flex-start;
-}
-
-.items-end{
-  align-items: flex-end;
 }
 
 .items-center{
@@ -949,22 +979,16 @@ video {
   margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }
 
-.space-x-2 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-x-reverse: 0;
-  margin-right: calc(0.5rem * var(--tw-space-x-reverse));
-  margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.space-y-2 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
-}
-
 .space-y-3 > :not([hidden]) ~ :not([hidden]){
   --tw-space-y-reverse: 0;
   margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
+}
+
+.space-x-2 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0.5rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
 .self-end{
@@ -1014,19 +1038,19 @@ video {
   border-color: rgb(107 114 128 / var(--tw-border-opacity));
 }
 
-.border-\[\#242424\]{
+.border-t-gray-100{
   --tw-border-opacity: 1;
-  border-color: rgb(36 36 36 / var(--tw-border-opacity));
-}
-
-.border-t-gray-200{
-  --tw-border-opacity: 1;
-  border-top-color: rgb(229 231 235 / var(--tw-border-opacity));
+  border-top-color: rgb(243 244 246 / var(--tw-border-opacity));
 }
 
 .border-b-gray-100{
   --tw-border-opacity: 1;
   border-bottom-color: rgb(243 244 246 / var(--tw-border-opacity));
+}
+
+.border-t-gray-200{
+  --tw-border-opacity: 1;
+  border-top-color: rgb(229 231 235 / var(--tw-border-opacity));
 }
 
 .bg-white{
@@ -1155,16 +1179,6 @@ video {
   padding-right: 3rem;
 }
 
-.px-6{
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-}
-
-.py-5{
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
-}
-
 .py-6{
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
@@ -1239,9 +1253,12 @@ video {
   line-height: 2rem;
 }
 
-.text-3xl{
-  font-size: 1.875rem;
-  line-height: 2.25rem;
+.text-\[1em\]{
+  font-size: 1em;
+}
+
+.text-\[24px\]{
+  font-size: 24px;
 }
 
 .font-\[600\]{
@@ -1276,16 +1293,16 @@ video {
   font-weight: 300;
 }
 
-.font-thin{
-  font-weight: 100;
+.font-\[500\]{
+  font-weight: 500;
+}
+
+.font-\[400\]{
+  font-weight: 400;
 }
 
 .uppercase{
   text-transform: uppercase;
-}
-
-.italic{
-  font-style: italic;
 }
 
 .leading-relaxed{
@@ -1929,7 +1946,7 @@ summary:after {
 
 main {
   min-width: 300px;
-  max-width: 500px;
+  max-width: 600px;
   margin: auto;
   position: relative;
   padding: 0 5px;
@@ -1959,7 +1976,7 @@ main p {
   border-image-slice: 1;
   /* border-width: 2px; */
   margin: 0;
-  padding: 40px;
+  padding: 20px 20px;
   counter-increment: section;
   position: relative;
   color: #34435e;
@@ -2085,12 +2102,12 @@ main p:last-child {
     top: 0px;
   }
 
-  .md\:mt-0{
-    margin-top: 0px;
-  }
-
   .md\:mb-0{
     margin-bottom: 0px;
+  }
+
+  .md\:mt-0{
+    margin-top: 0px;
   }
 
   .md\:block{
@@ -2117,8 +2134,8 @@ main p:last-child {
     width: 800px;
   }
 
-  .md\:w-\[1500px\]{
-    width: 1500px;
+  .md\:w-\[600px\]{
+    width: 600px;
   }
 
   .md\:max-w-md{
@@ -2129,24 +2146,12 @@ main p:last-child {
     max-width: 100%;
   }
 
-  .md\:max-w-2xl{
-    max-width: 42rem;
-  }
-
   .md\:flex-row{
     flex-direction: row;
   }
 
   .md\:items-start{
     align-items: flex-start;
-  }
-
-  .md\:items-center{
-    align-items: center;
-  }
-
-  .md\:justify-between{
-    justify-content: space-between;
   }
 
   .md\:gap-16{
@@ -2164,10 +2169,6 @@ main p:last-child {
     margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
-  .md\:p-10{
-    padding: 2.5rem;
-  }
-
   .md\:py-2{
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
@@ -2183,24 +2184,14 @@ main p:last-child {
     padding-right: 1.5rem;
   }
 
-  .md\:py-12{
-    padding-top: 3rem;
-    padding-bottom: 3rem;
-  }
-
-  .md\:px-12{
-    padding-left: 3rem;
-    padding-right: 3rem;
-  }
-
-  .md\:px-9{
-    padding-left: 2.25rem;
-    padding-right: 2.25rem;
-  }
-
   .md\:px-0{
     padding-left: 0px;
     padding-right: 0px;
+  }
+
+  .md\:py-12{
+    padding-top: 3rem;
+    padding-bottom: 3rem;
   }
 
   .md\:pt-8{
@@ -2211,20 +2202,16 @@ main p:last-child {
     padding-left: 3rem;
   }
 
-  .md\:pt-12{
-    padding-top: 3rem;
-  }
-
-  .md\:pl-24{
-    padding-left: 6rem;
-  }
-
   .md\:pl-28{
     padding-left: 7rem;
   }
 
-  .md\:text-left{
-    text-align: left;
+  .md\:pt-12{
+    padding-top: 3rem;
+  }
+
+  .md\:pl-14{
+    padding-left: 3.5rem;
   }
 
   .md\:text-sm{
@@ -2242,12 +2229,20 @@ main p:last-child {
     line-height: 1;
   }
 
-  .md\:font-black{
-    font-weight: 900;
+  .md\:text-\[24px\]{
+    font-size: 24px;
+  }
+
+  .md\:font-extrabold{
+    font-weight: 800;
   }
 
   .md\:font-normal{
     font-weight: 400;
+  }
+
+  .md\:font-black{
+    font-weight: 900;
   }
 
   .md\:font-semibold{
