--- a/css/main.css
+++ b/css/main.css
@@ -631,11 +631,6 @@ video {
   margin-bottom: 1rem;
 }
 
-.my-2{
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
-}
-
 .my-8{
   margin-top: 2rem;
   margin-bottom: 2rem;
@@ -704,6 +699,10 @@ video {
 
 .mt-\[100vh\]{
   margin-top: 100vh;
+}
+
+.mb-28{
+  margin-bottom: 7rem;
 }
 
 .mb-12{
@@ -799,8 +798,8 @@ video {
   width: 11rem;
 }
 
-.w-\[700px\]{
-  width: 700px;
+.w-\[600px\]{
+  width: 600px;
 }
 
 .w-\[180px\]{
@@ -813,18 +812,6 @@ video {
 
 .w-\[400px\]{
   width: 400px;
-}
-
-.w-\[150px\]{
-  width: 150px;
-}
-
-.w-\[130px\]{
-  width: 130px;
-}
-
-.w-\[600px\]{
-  width: 600px;
 }
 
 .max-w-md{
@@ -1067,6 +1054,16 @@ video {
   background-color: rgb(1 211 175 / var(--tw-bg-opacity));
 }
 
+.bg-purple-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(168 85 247 / var(--tw-bg-opacity));
+}
+
+.bg-yellow-200{
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 240 138 / var(--tw-bg-opacity));
+}
+
 .object-contain{
   -o-object-fit: contain;
      object-fit: contain;
@@ -1093,10 +1090,6 @@ video {
 
 .p-4{
   padding: 1rem;
-}
-
-.p-1{
-  padding: 0.25rem;
 }
 
 .px-4{
@@ -2023,6 +2016,10 @@ main p:last-child {
   display: none;
 }
 
+#about-container {
+  background-image: url("./img/pou.jpg");
+}
+
 .hover\:bg-accent:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(1 211 175 / var(--tw-bg-opacity));
@@ -2136,6 +2133,10 @@ main p:last-child {
     margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
+  .md\:p-2{
+    padding: 0.5rem;
+  }
+
   .md\:py-2{
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
@@ -2159,6 +2160,11 @@ main p:last-child {
   .md\:py-12{
     padding-top: 3rem;
     padding-bottom: 3rem;
+  }
+
+  .md\:px-3{
+    padding-left: 0.75rem;
+    padding-right: 0.75rem;
   }
 
   .md\:pt-8{
