--- a/css/main.css
+++ b/css/main.css
@@ -1054,16 +1054,6 @@ video {
   background-color: rgb(1 211 175 / var(--tw-bg-opacity));
 }
 
-.bg-purple-500{
-  --tw-bg-opacity: 1;
-  background-color: rgb(168 85 247 / var(--tw-bg-opacity));
-}
-
-.bg-yellow-200{
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 240 138 / var(--tw-bg-opacity));
-}
-
 .object-contain{
   -o-object-fit: contain;
      object-fit: contain;
@@ -1175,6 +1165,14 @@ video {
 
 .pb-2{
   padding-bottom: 0.5rem;
+}
+
+.pt-6{
+  padding-top: 1.5rem;
+}
+
+.pb-3{
+  padding-bottom: 0.75rem;
 }
 
 .text-left{
@@ -2017,7 +2015,16 @@ main p:last-child {
 }
 
 #about-container {
-  background-image: url("./img/pou.jpg");
+  /* height: 100vh; */
+  padding: 10px 0;
+  background-image: url("/img/pou.jpg");
+  background-size: 100% 100%;
+  -o-object-fit: fill;
+     object-fit: fill;
+}
+
+#about-container div {
+  background: rgba(255, 255, 255, 0.8);
 }
 
 .hover\:bg-accent:hover{
@@ -2177,6 +2184,10 @@ main p:last-child {
 
   .md\:pl-28{
     padding-left: 7rem;
+  }
+
+  .md\:pt-10{
+    padding-top: 2.5rem;
   }
 
   .md\:pt-12{
