--- a/input.css
+++ b/input.css
@@ -639,5 +639,12 @@ main p:last-child {
 }
 
 #about-container {
-  background-image: url("./img/pou.jpg");
+  /* height: 100vh; */
+  padding: 10px 0;
+  background-image: url("/img/pou.jpg");
+  background-size: 100% 100%;
+  object-fit: fill;
+}
+#about-container div {
+  background: rgba(255, 255, 255, 0.8);
 }
