--- a/input.css
+++ b/input.css
@@ -641,7 +641,7 @@ main p:last-child {
 #about-container {
   /* height: 100vh; */
   padding: 10px 0;
-  background-image: url("./img/pou.jpg");
+  background-image: url("../img/pou.jpg");
   background-size: 100% 100%;
   object-fit: fill;
 }
