--- a/css/main.css
+++ b/css/main.css
@@ -581,8 +581,12 @@ video {
   right: 1.5rem;
 }
 
-.-top-8{
-  top: -2rem;
+.-right-12{
+  right: -3rem;
+}
+
+.-top-6{
+  top: -1.5rem;
 }
 
 .bottom-0{
@@ -637,8 +641,8 @@ video {
   margin-right: -0.75rem;
 }
 
-.ml-36{
-  margin-left: 9rem;
+.ml-6{
+  margin-left: 1.5rem;
 }
 
 .mt-10{
@@ -669,6 +673,10 @@ video {
   margin-top: 4rem;
 }
 
+.mb-12{
+  margin-bottom: 3rem;
+}
+
 .mb-8{
   margin-bottom: 2rem;
 }
@@ -697,12 +705,16 @@ video {
   margin-bottom: 7rem;
 }
 
-.mb-12{
-  margin-bottom: 3rem;
+.mb-20{
+  margin-bottom: 5rem;
 }
 
 .mt-12{
   margin-top: 3rem;
+}
+
+.ml-10{
+  margin-left: 2.5rem;
 }
 
 .block{
@@ -889,10 +901,10 @@ video {
        column-gap: 2rem;
 }
 
-.space-x-8 > :not([hidden]) ~ :not([hidden]){
+.space-x-10 > :not([hidden]) ~ :not([hidden]){
   --tw-space-x-reverse: 0;
-  margin-right: calc(2rem * var(--tw-space-x-reverse));
-  margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)));
+  margin-right: calc(2.5rem * var(--tw-space-x-reverse));
+  margin-left: calc(2.5rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
 .space-y-6 > :not([hidden]) ~ :not([hidden]){
@@ -968,9 +980,9 @@ video {
   border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 
-.border-textBlue{
+.border-gray-200{
   --tw-border-opacity: 1;
-  border-color: rgb(1 17 69 / var(--tw-border-opacity));
+  border-color: rgb(229 231 235 / var(--tw-border-opacity));
 }
 
 .border-t-gray-100{
@@ -1090,6 +1102,16 @@ video {
   padding-right: 0.75rem;
 }
 
+.py-3{
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
+.px-9{
+  padding-left: 2.25rem;
+  padding-right: 2.25rem;
+}
+
 .py-12{
   padding-top: 3rem;
   padding-bottom: 3rem;
@@ -1113,11 +1135,6 @@ video {
 .py-6{
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
-}
-
-.py-3{
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
 }
 
 .pt-4{
@@ -1148,6 +1165,10 @@ video {
   padding-bottom: 0.75rem;
 }
 
+.pl-10{
+  padding-left: 2.5rem;
+}
+
 .text-left{
   text-align: left;
 }
@@ -1156,18 +1177,14 @@ video {
   text-align: center;
 }
 
-.font-body{
-  font-family: Merriweather;
-}
-
 .text-xs{
   font-size: 0.75rem;
   line-height: 1rem;
 }
 
-.text-5xl{
-  font-size: 3rem;
-  line-height: 1;
+.text-3xl{
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 
 .text-\[20px\]{
@@ -1178,12 +1195,13 @@ video {
   font-size: 16px;
 }
 
-.text-\[1em\]{
-  font-size: 1em;
+.text-5xl{
+  font-size: 3rem;
+  line-height: 1;
 }
 
-.text-\[18px\]{
-  font-size: 18px;
+.text-\[1em\]{
+  font-size: 1em;
 }
 
 .text-4xl{
@@ -1256,6 +1274,11 @@ video {
 .text-overlay{
   --tw-text-opacity: 1;
   color: rgb(242 243 246 / var(--tw-text-opacity));
+}
+
+.text-black{
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .text-white{
@@ -1700,15 +1723,6 @@ details[open] summary:after {
   font-weight: 200;
 }
 
-.faq-body {
-  /* width: 70em; */
-  margin: 4em auto;
-  /* box-shadow: 0px 0px 16px #5b5b5b; */
-  border-radius: 0.2em;
-  padding: 0 5em;
-  background-color: #fff;
-}
-
 .faq-list {
   width: 55em;
   margin: 1em auto;
@@ -1781,7 +1795,7 @@ summary:after {
 }
 
 #linkedin:hover {
-  color: blue;
+  color: rgb(59, 137, 255);
 }
 
 #instagram:hover {
@@ -2000,6 +2014,16 @@ main p:last-child {
   background: rgba(255, 255, 255, 0.85);
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+
 .hover\:bg-accent:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(1 211 175 / var(--tw-bg-opacity));
@@ -2090,12 +2114,24 @@ main p:last-child {
     width: 600px;
   }
 
+  .md\:w-auto{
+    width: auto;
+  }
+
+  .md\:max-w-3xl{
+    max-width: 48rem;
+  }
+
   .md\:max-w-md{
     max-width: 28rem;
   }
 
   .md\:max-w-full{
     max-width: 100%;
+  }
+
+  .md\:max-w-\[70em\]{
+    max-width: 70em;
   }
 
   .md\:flex-row{
@@ -2182,6 +2218,11 @@ main p:last-child {
   .md\:text-sm{
     font-size: 0.875rem;
     line-height: 1.25rem;
+  }
+
+  .md\:text-6xl{
+    font-size: 3.75rem;
+    line-height: 1;
   }
 
   .md\:text-\[24px\]{
