--- a/input.css
+++ b/input.css
@@ -377,15 +377,6 @@ details[open] summary:after {
   font-weight: 200;
 }
 
-.faq-body {
-  /* width: 70em; */
-  margin: 4em auto;
-  /* box-shadow: 0px 0px 16px #5b5b5b; */
-  border-radius: 0.2em;
-  padding: 0 5em;
-  background-color: #fff;
-}
-
 .faq-list {
   width: 55em;
   margin: 1em auto;
@@ -454,7 +445,7 @@ summary:after {
   font-size: 0.8em;
 }
 #linkedin:hover {
-  color: blue;
+  color: rgb(59, 137, 255);
 }
 #instagram:hover {
   color: violet;
@@ -647,4 +638,13 @@ main p:last-child {
 }
 #about-container div {
   background: rgba(255, 255, 255, 0.85);
+}
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
 }
