--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;500;700&display=swap");
 
+@import url("https://fonts.googleapis.com/css2?family=Teko:wght@400;500;600&display=swap");
+
 /*
 ! tailwindcss v3.2.4 | MIT License | https://tailwindcss.com
 */
@@ -593,6 +595,10 @@ video {
   bottom: 0px;
 }
 
+.left-6{
+  left: 1.5rem;
+}
+
 .-left-64{
   left: -16rem;
 }
@@ -758,10 +764,6 @@ video {
   height: 400px;
 }
 
-.w-\[250px\]{
-  width: 250px;
-}
-
 .w-screen{
   width: 100vw;
 }
@@ -828,6 +830,10 @@ video {
 
 .shrink-0{
   flex-shrink: 0;
+}
+
+.transform{
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .cursor-pointer{
@@ -925,6 +931,12 @@ video {
   --tw-space-y-reverse: 0;
   margin-top: calc(3rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(3rem * var(--tw-space-y-reverse));
+}
+
+.space-x-14 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-x-reverse: 0;
+  margin-right: calc(3.5rem * var(--tw-space-x-reverse));
+  margin-left: calc(3.5rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
 .space-y-4 > :not([hidden]) ~ :not([hidden]){
@@ -1040,11 +1052,6 @@ video {
      object-fit: contain;
 }
 
-.object-fill{
-  -o-object-fit: fill;
-     object-fit: fill;
-}
-
 .object-right{
   -o-object-position: right;
      object-position: right;
@@ -1113,14 +1120,19 @@ video {
   padding-bottom: 3rem;
 }
 
-.py-10{
-  padding-top: 2.5rem;
-  padding-bottom: 2.5rem;
+.px-6{
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 
 .py-4{
   padding-top: 1rem;
   padding-bottom: 1rem;
+}
+
+.py-10{
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
 }
 
 .px-12{
@@ -1141,12 +1153,20 @@ video {
   padding-bottom: 1rem;
 }
 
+.pl-8{
+  padding-left: 2rem;
+}
+
 .pr-4{
   padding-right: 1rem;
 }
 
 .pt-5{
   padding-top: 1.25rem;
+}
+
+.pt-2{
+  padding-top: 0.5rem;
 }
 
 .pb-2{
@@ -1171,6 +1191,15 @@ video {
 
 .text-center{
   text-align: center;
+}
+
+.font-title{
+  font-family: Teko;
+}
+
+.text-4xl{
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 
 .text-xs{
@@ -1200,11 +1229,6 @@ video {
   font-size: 1em;
 }
 
-.text-4xl{
-  font-size: 2.25rem;
-  line-height: 2.5rem;
-}
-
 .text-2xl{
   font-size: 1.5rem;
   line-height: 2rem;
@@ -1212,6 +1236,10 @@ video {
 
 .font-\[600\]{
   font-weight: 600;
+}
+
+.font-normal{
+  font-weight: 400;
 }
 
 .font-bold{
@@ -1242,10 +1270,6 @@ video {
   font-weight: 300;
 }
 
-.font-normal{
-  font-weight: 400;
-}
-
 .uppercase{
   text-transform: uppercase;
 }
@@ -1267,14 +1291,14 @@ video {
   color: rgb(1 17 69 / var(--tw-text-opacity));
 }
 
-.text-overlay{
-  --tw-text-opacity: 1;
-  color: rgb(242 243 246 / var(--tw-text-opacity));
-}
-
 .text-black{
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.text-overlay{
+  --tw-text-opacity: 1;
+  color: rgb(242 243 246 / var(--tw-text-opacity));
 }
 
 .text-white{
@@ -1387,7 +1411,7 @@ html {
   left: 80px;
   width: 24px;
   height: 2px;
-  background: #fff;
+  background: #000;
   transform: rotate(0);
   transition: all 0.5s;
 }
@@ -1417,46 +1441,6 @@ html {
   transform: rotate(-45deg) translateY(6px) translate(-6px);
 }
 
-/* code for #button on homepage */
-
-#button {
-  /* border-radius: 4px; */
-  /* background-color: #5ca1e1; */
-  /* border: none; */
-  /* color: #fff; */
-  text-align: center;
-  /* font-size: 32px; */
-  /* padding: 16px; */
-  /* width: 220px; */
-  transition: all 0.5s;
-  /* margin: 36px; */
-  /* box-shadow: 0 10px 20px -8px rgba(0, 0, 0, 0.7); */
-  cursor: pointer;
-  display: inline-block;
-  position: relative;
-  transition: 0.5s;
-}
-
-#button:after {
-  content: "»";
-  position: absolute;
-  opacity: 0;
-  top: 5px;
-  right: -20px;
-  transition: 0.5s;
-}
-
-#button:hover {
-  padding-right: 24px;
-  padding-left: 8px;
-  /* border: none; */
-}
-
-#button:hover:after {
-  opacity: 1;
-  right: 5px;
-}
-
 :root {
   --surface-color: #fff;
   --curve: 40;
@@ -1470,15 +1454,6 @@ html {
   border-bottom: 2px solid #01c0c4;
   font-weight: 660;
 }
-
-/* .cards {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  gap: 2rem;
-  margin: 4rem 5vw;
-  padding: 0;
-  list-style-type: none;
-} */
 
 :root {
   --red: hsl(0, 78%, 62%);
@@ -2010,6 +1985,10 @@ input[type="number"] {
 }
 
 @media (min-width: 640px){
+  .sm\:w-auto{
+    width: auto;
+  }
+
   .sm\:self-center{
     align-self: center;
   }
@@ -2066,10 +2045,6 @@ input[type="number"] {
 
   .md\:max-w-3xl{
     max-width: 48rem;
-  }
-
-  .md\:max-w-md{
-    max-width: 28rem;
   }
 
   .md\:max-w-full{
@@ -2131,6 +2106,10 @@ input[type="number"] {
   .md\:px-3{
     padding-left: 0.75rem;
     padding-right: 0.75rem;
+  }
+
+  .md\:pl-20{
+    padding-left: 5rem;
   }
 
   .md\:pt-8{
