--- a/input.css
+++ b/input.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Teko:wght@400;500;600&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -55,7 +56,7 @@ html {
   left: 80px;
   width: 24px;
   height: 2px;
-  background: #fff;
+  background: #000;
   transform: rotate(0);
   transition: all 0.5s;
 }
@@ -85,49 +86,6 @@ html {
   transform: rotate(-45deg) translateY(6px) translate(-6px);
 }
 
-/* code for #button on homepage */
-#button {
-  /* border-radius: 4px; */
-  /* background-color: #5ca1e1; */
-  /* border: none; */
-  /* color: #fff; */
-  text-align: center;
-  /* font-size: 32px; */
-  /* padding: 16px; */
-  /* width: 220px; */
-  transition: all 0.5s;
-  cursor: pointer;
-  /* margin: 36px; */
-  /* box-shadow: 0 10px 20px -8px rgba(0, 0, 0, 0.7); */
-}
-
-#button {
-  cursor: pointer;
-  display: inline-block;
-  position: relative;
-  transition: 0.5s;
-}
-
-#button:after {
-  content: "»";
-  position: absolute;
-  opacity: 0;
-  top: 5px;
-  right: -20px;
-  transition: 0.5s;
-}
-
-#button:hover {
-  padding-right: 24px;
-  padding-left: 8px;
-  /* border: none; */
-}
-
-#button:hover:after {
-  opacity: 1;
-  right: 5px;
-}
-
 :root {
   --surface-color: #fff;
   --curve: 40;
@@ -141,14 +99,6 @@ html {
   font-weight: 660;
 }
 
-/* .cards {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  gap: 2rem;
-  margin: 4rem 5vw;
-  padding: 0;
-  list-style-type: none;
-} */
 :root {
   --red: hsl(0, 78%, 62%);
   --cyan: hsl(180, 62%, 55%);
