--- a/css/main.css
+++ b/css/main.css
@@ -637,11 +637,6 @@ video {
   margin-bottom: 1rem;
 }
 
-.my-8{
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-}
-
 .-mx-3{
   margin-left: -0.75rem;
   margin-right: -0.75rem;
@@ -723,10 +718,6 @@ video {
   display: block;
 }
 
-.inline{
-  display: inline;
-}
-
 .flex{
   display: flex;
 }
@@ -764,12 +755,12 @@ video {
   height: 400px;
 }
 
-.w-screen{
-  width: 100vw;
-}
-
 .w-1\/2{
   width: 50%;
+}
+
+.w-screen{
+  width: 100vw;
 }
 
 .w-\[50px\]{
@@ -802,10 +793,6 @@ video {
 
 .w-\[180px\]{
   width: 180px;
-}
-
-.w-\[200px\]{
-  width: 200px;
 }
 
 .w-\[400px\]{
@@ -909,16 +896,16 @@ video {
   margin-left: calc(2.5rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
-.space-y-6 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-y-reverse: 0;
-  margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
-}
-
 .space-x-4 > :not([hidden]) ~ :not([hidden]){
   --tw-space-x-reverse: 0;
   margin-right: calc(1rem * var(--tw-space-x-reverse));
   margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.space-y-4 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }
 
 .space-y-8 > :not([hidden]) ~ :not([hidden]){
@@ -933,16 +920,16 @@ video {
   margin-bottom: calc(3rem * var(--tw-space-y-reverse));
 }
 
+.space-y-6 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
+}
+
 .space-x-14 > :not([hidden]) ~ :not([hidden]){
   --tw-space-x-reverse: 0;
   margin-right: calc(3.5rem * var(--tw-space-x-reverse));
   margin-left: calc(3.5rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.space-y-4 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-y-reverse: 0;
-  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }
 
 .space-y-3 > :not([hidden]) ~ :not([hidden]){
@@ -1008,6 +995,21 @@ video {
   border-top-color: rgb(229 231 235 / var(--tw-border-opacity));
 }
 
+.border-b-gray-300{
+  --tw-border-opacity: 1;
+  border-bottom-color: rgb(209 213 219 / var(--tw-border-opacity));
+}
+
+.border-b-black{
+  --tw-border-opacity: 1;
+  border-bottom-color: rgb(0 0 0 / var(--tw-border-opacity));
+}
+
+.border-b-slate-200{
+  --tw-border-opacity: 1;
+  border-bottom-color: rgb(226 232 240 / var(--tw-border-opacity));
+}
+
 .bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -1022,14 +1024,14 @@ video {
   background-color: rgb(12 105 128 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#0f6d6d\]{
-  --tw-bg-opacity: 1;
-  background-color: rgb(15 109 109 / var(--tw-bg-opacity));
-}
-
 .bg-slate-50{
   --tw-bg-opacity: 1;
   background-color: rgb(248 250 252 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#0f6d6d\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(15 109 109 / var(--tw-bg-opacity));
 }
 
 .bg-\[\#242424\]{
@@ -1062,11 +1064,6 @@ video {
      object-position: right;
 }
 
-.object-left{
-  -o-object-position: left;
-     object-position: left;
-}
-
 .p-4{
   padding: 1rem;
 }
@@ -1078,16 +1075,6 @@ video {
 .px-4{
   padding-left: 1rem;
   padding-right: 1rem;
-}
-
-.py-8{
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-}
-
-.px-8{
-  padding-left: 2rem;
-  padding-right: 2rem;
 }
 
 .py-1{
@@ -1110,6 +1097,16 @@ video {
   padding-right: 0.75rem;
 }
 
+.py-4{
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.px-8{
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
 .py-3{
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
@@ -1125,19 +1122,24 @@ video {
   padding-bottom: 3rem;
 }
 
+.py-8{
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
 .px-6{
   padding-left: 1.5rem;
   padding-right: 1.5rem;
 }
 
-.py-4{
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-
 .py-10{
   padding-top: 2.5rem;
   padding-bottom: 2.5rem;
+}
+
+.px-56{
+  padding-left: 14rem;
+  padding-right: 14rem;
 }
 
 .px-12{
@@ -1148,6 +1150,16 @@ video {
 .py-6{
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
+}
+
+.px-24{
+  padding-left: 6rem;
+  padding-right: 6rem;
+}
+
+.px-36{
+  padding-left: 9rem;
+  padding-right: 9rem;
 }
 
 .pt-4{
@@ -1247,16 +1259,16 @@ video {
   font-weight: 400;
 }
 
-.font-bold{
-  font-weight: 700;
-}
-
 .font-semibold{
   font-weight: 600;
 }
 
 .font-medium{
   font-weight: 500;
+}
+
+.font-bold{
+  font-weight: 700;
 }
 
 .font-black{
@@ -1301,14 +1313,14 @@ video {
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
-.text-overlay{
-  --tw-text-opacity: 1;
-  color: rgb(242 243 246 / var(--tw-text-opacity));
-}
-
 .text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-darkBlue{
+  --tw-text-opacity: 1;
+  color: rgb(1 16 76 / var(--tw-text-opacity));
 }
 
 .text-accent{
@@ -1329,11 +1341,6 @@ video {
 .text-\[\#f57456\]{
   --tw-text-opacity: 1;
   color: rgb(245 116 86 / var(--tw-text-opacity));
-}
-
-.text-darkBlue{
-  --tw-text-opacity: 1;
-  color: rgb(1 16 76 / var(--tw-text-opacity));
 }
 
 .shadow{
@@ -2128,10 +2135,6 @@ input[type="number"] {
 
   .md\:pl-14{
     padding-left: 3.5rem;
-  }
-
-  .md\:pl-28{
-    padding-left: 7rem;
   }
 
   .md\:pt-10{
