--- a/css/main.css
+++ b/css/main.css
@@ -583,8 +583,8 @@ video {
   right: 1.5rem;
 }
 
-.-right-12{
-  right: -3rem;
+.-right-14{
+  right: -3.5rem;
 }
 
 .-top-6{
@@ -650,12 +650,20 @@ video {
   margin-top: 2.5rem;
 }
 
-.mt-14{
-  margin-top: 3.5rem;
+.mt-24{
+  margin-top: 6rem;
 }
 
-.ml-16{
-  margin-left: 4rem;
+.mb-6{
+  margin-bottom: 1.5rem;
+}
+
+.mt-64{
+  margin-top: 16rem;
+}
+
+.mb-4{
+  margin-bottom: 1rem;
 }
 
 .mt-28{
@@ -664,10 +672,6 @@ video {
 
 .mt-4{
   margin-top: 1rem;
-}
-
-.mb-4{
-  margin-bottom: 1rem;
 }
 
 .mt-16{
@@ -684,10 +688,6 @@ video {
 
 .mt-20{
   margin-top: 5rem;
-}
-
-.mb-6{
-  margin-bottom: 1.5rem;
 }
 
 .mb-2{
@@ -726,17 +726,13 @@ video {
   display: none;
 }
 
-.h-\[100vh\]{
-  height: 100vh;
+.h-auto{
+  height: auto;
 }
 
 .h-fit{
   height: -moz-fit-content;
   height: fit-content;
-}
-
-.h-auto{
-  height: auto;
 }
 
 .h-px{
@@ -1049,9 +1045,18 @@ video {
      object-fit: contain;
 }
 
+.object-cover{
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 .object-right{
   -o-object-position: right;
      object-position: right;
+}
+
+.p-8{
+  padding: 2rem;
 }
 
 .p-4{
@@ -1097,14 +1102,19 @@ video {
   padding-right: 2rem;
 }
 
+.px-24{
+  padding-left: 6rem;
+  padding-right: 6rem;
+}
+
 .py-3{
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
 }
 
-.px-9{
-  padding-left: 2.25rem;
-  padding-right: 2.25rem;
+.px-7{
+  padding-left: 1.75rem;
+  padding-right: 1.75rem;
 }
 
 .py-12{
@@ -1151,6 +1161,10 @@ video {
 
 .pr-4{
   padding-right: 1rem;
+}
+
+.pt-36{
+  padding-top: 9rem;
 }
 
 .pt-5{
@@ -1208,13 +1222,17 @@ video {
   font-size: 20px;
 }
 
-.text-\[16px\]{
-  font-size: 16px;
+.text-\[18px\]{
+  font-size: 18px;
 }
 
 .text-5xl{
   font-size: 3rem;
   line-height: 1;
+}
+
+.text-\[16px\]{
+  font-size: 16px;
 }
 
 .text-\[1em\]{
@@ -1244,10 +1262,6 @@ video {
 
 .font-bold{
   font-weight: 700;
-}
-
-.font-black{
-  font-weight: 900;
 }
 
 .font-\[800\]{
@@ -1764,21 +1778,6 @@ details[open] .faq-card-spoiler {
   }
 }
 
-/* #intro {
-  /* background-color: red; */
-
-/* background-image: url("../img/bg.png"); */
-
-/* z-index: -1; */
-
-/* background-size: 100% 100%; */
-
-/* background-repeat: no-repeat; */
-
-/* object-fit: fill; */
-
-/* } */
-
 .navbarColor {
   transition: all 0.1s ease;
   background-color: white;
@@ -2139,6 +2138,10 @@ input[type="number"] {
     line-height: 1;
   }
 
+  .md\:font-bold{
+    font-weight: 700;
+  }
+
   .md\:font-extrabold{
     font-weight: 800;
   }
@@ -2148,6 +2151,12 @@ input[type="number"] {
   }
 
   .md\:font-black{
+    font-weight: 900;
+  }
+}
+
+@media (min-width: 1024px){
+  .lg\:font-black{
     font-weight: 900;
   }
 }
