--- a/input.css
+++ b/input.css
@@ -524,17 +524,21 @@ main p:last-child {
 #more2 {
   display: none;
 }
+@media (min-width: 768px) {
+  #about-container {
+    padding: 10px 0;
+    background-image: url("../img/pou.jpg");
+    background-size: 100% 100%;
+    object-fit: fill;
+  }
+  #about-container div {
+    background: rgba(255, 255, 255, 0.85);
+  }
+  #about-container form {
+    box-shadow: 10px 30px 40px -20px var(--grayishBlue);
+  }
+}
 
-#about-container {
-  /* height: 100vh; */
-  padding: 10px 0;
-  background-image: url("../img/pou.jpg");
-  background-size: 100% 100%;
-  object-fit: fill;
-}
-#about-container div {
-  background: rgba(255, 255, 255, 0.85);
-}
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
